WIP IMenu#Enabled